# pangolin

./: README.md  setup.py
CMakeModules/: FindFFMPEG.cmake
include/pangolin/: config.h
pangolin.egg-info/: PKG-INFO  SOURCES.txt
python/: CMakeLists.txt
src/: CMakeLists.txt
src/image/: image_io_jpg.cpp
